--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
 		<h2>About</h2>
 		<p>These drawings were drawn between Jul and Aug of 1961. Several of the drawings have various revisions but I only have a single copy of each drawing and I assume they are the latest revisions. I hope you all enjoyed these.</p>
 		
+		<p>If you know any details about any specific drawings and would like to add a description to any of them please submit a pull request here <a href="https://github.com/buildstarted/apollopreliminarydrawings">https://github.com/buildstarted/apollopreliminarydrawings</a>.</p>
+		
 		<p>I really want to give a shout out to <strong>Scott Manley</strong>. He offered some great insights into the drawings in his video about them that I was unable to get. Please follow him on <a href="https://twitter.com/DJSnM">Twitter</a> or check out his videos on <a href="https://www.youtube.com/user/szyzyg/videos">Youtube</a>.</p>
     </div>
 
