--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     </div>
 
     <footer>
-        <div>website created by buildstarted &copy; 2019 <a href="/about">about</a></div>
+        <div>website created by buildstarted &copy; 2019 - 2020 <a href="/about">about</a></div>
     </footer>
 	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
