--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<div class="devring" style="background: #222">
 		<div class="grid">
 			<div style="display: grid; grid-template-columns: .5fr 1fr 1fr 1fr; text-align: center;">
-				<span class="devring-title">devring.club</span>
-				<a href="https://devring.club/site/2/previous" class="devring-previous">Previous</a>
+				<span class="devring-title"><a href="https://devring.club/">devring.club</a></span>
+				<a href="https://devring.club/sites/2/prev" class="devring-previous">Previous</a>
 				<a href="https://devring.club/random" class="devring-random">Random</a>
 				<a href="https://devring.club/sites/2/next" class="devring-next">Next</a>
 			</div>
