--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 	<div class="devring" style="background: #222">
+		<div style="text-align:center">Explore other dev related sites in this ring. If you would like to join this ring <a href="https://devring.club">click here</a>.</div>
 		<div class="grid">
 			<div style="display: grid; grid-template-columns: .5fr 1fr 1fr 1fr; text-align: center;">
 				<span class="devring-title"><a href="https://devring.club/">devring.club</a></span>
