--- a/3069-104.html
+++ b/3069-104.html
@@ -28,7 +28,7 @@
     </div>
 
     <footer>
-        <div>website created by buildstarted &copy; 2019 - 2021 <a href="/about">about</a></div>
+        <div>website created by buildstarted &copy; 2019 - 20220231 <a href="/about">about</a></div>
     </footer>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
